# deckhandler

./: .clang-format  .gitignore  .travis.yml  AUTHORS.md  BUILD_INTERFACE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SWIG_INTERFACE.md  deckhandler.c  deckhandler.h  deckhandler.i  deckhandler.pc.in  example-01.c  example_01_output.txt  meson.build  meson_options.txt
.github/workflows/: c-cpp.yml  linux.yml  macos.yml  windows.yml
subprojects/pcg/: meson.build  pcg_basic.c
swig/: deckhandler.i  meson.build
test/: meson.build  test_01.c
